force-app/main/default/objects/POE_Retail_Store__c/POE_Retail_Store__c.object-meta.xml
<CustomObject>
    <label>Retail Store</label>
    <nameField>
        <label>Store Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retail Stores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>