force-app/main/default/objects/POE_Retail_Store__c/fields/POE_Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>POE_Dealer_Code__c</fullName>
    <description>Dealer Codes for non-DTV associated stores</description>
    <label>Frontier UserID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>