force-app/main/default/objects/POE_Retail_Store__c/fields/POE_DTV_FFL__c.field-meta.xml
<CustomField>
    <fullName>POE_DTV_FFL__c</fullName>
    <label>DIRECTV Dealer Code FFL</label>
    <length>15</length>
    <type>Text</type>
</CustomField>