force-app/main/default/objects/POE_Retail_Store__c/fields/POE_DTV_NFFL__c.field-meta.xml
<CustomField>
    <fullName>POE_DTV_NFFL__c</fullName>
    <description>Dealer Code for DIRECTV&apos;s Retail Sales</description>
    <label>DIRECTV Dealer Code NFFL</label>
    <length>15</length>
    <type>Text</type>
</CustomField>