force-app/main/default/objects/POE_Retail_Store__c/fields/POE_End_Date__c.field-meta.xml
<CustomField>
    <fullName>POE_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>