force-app/main/default/objects/POE_Retail_Store__c/fields/POE_Retail_National_Retail__c.field-meta.xml
<CustomField>
    <fullName>POE_Retail_National_Retail__c</fullName>
    <label>Retail/National Retail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>National Retail</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>