force-app/main/default/objects/POE_Retail_Store__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Formula field that determines Active or Inactive status depending on the End Date - PER-[4371].</description>
    <formula>If(POE_End_Date__c &lt; TODAY(), &apos;Inactive&apos;, &apos;Active&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>