force-app/main/default/objects/POE_Retail_Store__c/fields/Store_Number__c.field-meta.xml
<CustomField>
    <fullName>Store_Number__c</fullName>
    <description>Used by Account Services to save the store number [PER-3343]</description>
    <label>Store Number</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>