force-app/main/default/objects/POE_Retail_Store__c/fields/Xfinity_Acct__c.field-meta.xml
<CustomField>
    <fullName>Xfinity_Acct__c</fullName>
    <label>Xfinity Acct #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>