force-app/main/default/objects/POE_Retail_Store__c/validationRules/End_Date_Cannot_Be_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Cannot_Be_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( POE_Start_Date__c ), NOT(ISBLANK( POE_End_Date__c )))</errorConditionFormula>
    <errorDisplayField>POE_End_Date__c</errorDisplayField>
    <errorMessage>An End Date can&apos;t be set if the Store doesn&apos;t have a Start Date</errorMessage>
</ValidationRule>