force-app/main/default/objects/POE_Retail_Store__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>POE_Retail_National_Retail__c</columns>
    <columns>POE_Start_Date__c</columns>
    <columns>POE_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>