force-app/main/default/objects/POE_Retail_Store__c/listViews/Xfinity_Stores.listView-meta.xml
<ListView>
    <fullName>Xfinity_Stores</fullName>
    <columns>NAME</columns>
    <columns>Xfinity_Acct__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Xfinity_Acct__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Xfinity Stores</label>
    <sharedTo>
        <role>Finance</role>
    </sharedTo>
</ListView>